manifests/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: alaina
  labels:
    project: alaina
