manifests/04-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: alaina-svc
  namespace: alaina
  labels:
    app: alaina
spec:
  type: ClusterIP
  selector:
    app: alaina
  ports:
    - name: http
      port: 80
      targetPort: 80
