manifests/05-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alaina-ingress
  namespace: alaina
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - alaina.local
      secretName: alaina-tls-secret
  rules:
    - host: alaina.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: alaina-svc
                port:
                  number: 80
